# Synapse-Chain

./: .dockerignore  .env  README.md  deploy_contract.py  docker-compose.yml  ensure_i2p_router_sam.py  graphical_client.py  start.py  test_ensure_i2p_router_sam.py  test_start.py
consensus/: Dockerfile  README.md  pyproject.toml  run_network_simulation.py  run_simulation.py  run_tests.py
consensus/src/consensus/: __init__.py  attestations.py  block_processing.py  committees.py  config.py  eligibility.py  epoch_processing.py  finality.py  fork_choice.py  penalties.py  proofs.py  proposer.py  randomness.py  scoring.py  simulation.py  state.py  types.py  utils.py  validator.py
consensus/src/consensus/networking/: __init__.py  bft.py  committee.py  config.py  dht.py  gossip.py  node.py  pon.py  simulation.py  sync.py  types.py
consensus/tests/: test_attestations_and_finality.py  test_helpers.py  test_networking.py  test_penalties_and_fork_choice.py  test_scoring.py  test_selection.py
execution/src/crates/crypto/: README.md  pyproject.toml
execution/src/crates/crypto/src/crypto/: __init__.py  address.py  keccak.py  secp256k1.py
execution/src/crates/crypto/tests/: test_crypto.py
execution/src/crates/evm/: README.md  pyproject.toml
execution/src/crates/evm/src/evm/: __init__.py  account.py  callframe.py  context.py  exceptions.py  gas.py  interpreter.py  logs.py  memory.py  opcodes.py  precompiles.py  stack.py  state.py  storage.py  tracing.py  utils.py
execution/src/crates/evm/tests/: helpers.py  test_calls.py  test_create.py  test_gas.py  test_logs.py  test_memory.py  test_precompiles.py  test_revert_return.py  test_solidity_contracts.py  test_stack.py  test_storage.py
execution/src/crates/execution/: README.md  demo_block_layer.py  pyproject.toml
execution/src/crates/execution/examples/: container_node.py  demo_support.py  phantom_channels_demo.py  start_archive_node.py  start_bootnode.py  start_full_node.py  start_light_node.py  start_state_provider.py  start_validator_node.py
execution/src/crates/execution/examples/configs/: archive_node.json  bootnode.json  full_node.json  light_node.json  state_provider.json  validator_node.json
execution/src/crates/execution/src/debug/: __init__.py  diff_trace.py  trace.py
execution/src/crates/execution/src/execution/: __init__.py  base_fee.py  block.py  block_builder.py  block_executor.py  block_header.py  block_validation.py  block_validator.py  dht_hooks.py  exceptions.py  fee_market.py  hashing.py  intrinsic_gas.py  journal.py  logs_bloom.py  receipt.py  result.py  rlp_codec.py  state_transition.py  transaction.py  trie.py  tx_validation.py  zk_hooks.py
execution/src/crates/execution/src/execution_tests/: __init__.py  comparator.py  fork_rules.py  loader.py  models.py  roots.py  (+1 more)
execution/src/crates/execution/tests/: execution_test_helpers.py  test_base_fee.py  test_block_builder.py  test_block_execution.py  test_block_header.py  test_block_replay.py  test_contract_deployer.py  test_demo_support_env.py  test_dht_hooks.py  test_execution_runner.py  test_failed_transactions.py  test_fee_distribution.py  test_fixture_loader.py  test_i2p_overlay_helpers.py  test_intrinsic_gas.py  test_multi_tx_block.py  test_phantom_channels.py  test_receipts.py  test_regressions.py  test_reverts.py  test_roots.py  test_rpc_server.py  test_rpc_txpool.py  test_rpc_types.py  test_state_transition.py  test_sync_subsystem.py  test_trace_debug.py  test_transaction_validation.py  test_zk_hooks.py
execution/src/crates/primitives/: README.md  pyproject.toml
execution/src/crates/primitives/tests/: test_types.py
execution/src/crates/state/: README.md  pyproject.toml
execution/src/crates/state/tests/: test_state.py
execution/src/crates/transactions/: README.md  pyproject.toml
execution/src/crates/transactions/tests/: test_transactions.py
execution/src/crates/zk/: README.md  pyproject.toml
execution/src/crates/zk/tests/: test_zk.py
(+136 files in other folders)
