[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-consensus-client"
version = "0.1.0"
description = "Ethereum-style hybrid multi-resource consensus client in Python."
requires-python = ">=3.12"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
