[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "execution-crypto"
version = "0.1.0"
description = "Ethereum execution-layer cryptographic primitives."
requires-python = ">=3.13"
dependencies = ["execution-primitives>=0.1.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
