[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "execution-primitives"
version = "0.1.0"
description = "Core Ethereum execution-layer primitive types."
requires-python = ">=3.13"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
