[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "execution-state"
version = "0.1.0"
description = "Ethereum-compatible execution-layer state model."
requires-python = ">=3.13"
dependencies = [
  "execution-primitives>=0.1.0",
  "execution-crypto>=0.1.0",
  "execution-encoding>=0.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
