[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "execution-transactions"
version = "0.1.0"
description = "Ethereum-compatible transactions with optional ZK extensions."
requires-python = ">=3.13"
dependencies = [
  "execution-primitives>=0.1.0",
  "execution-crypto>=0.1.0",
  "execution-encoding>=0.1.0",
  "execution-state>=0.1.0",
  "execution-zk>=0.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
